🐛 Fixed screen overflow

--- a/app/src/computer/screen/Screen.module.css
+++ b/app/src/computer/screen/Screen.module.css
@@ -1,6 +1,6 @@
 /* Based on https://css-tricks.com/old-timey-terminal-styling/ */
 .screen {
-  @apply whitespace-pre-wrap break-all font-mono relative text-lg text-white h-48 rounded-lg border border-stone-600 p-1 m-4;
+  @apply whitespace-pre-wrap break-all font-mono relative text-lg text-white h-48 rounded-lg border border-stone-600 p-1 m-4 overflow-auto scrollbar-stone-800;
 
   background-color: theme(colors.stone.900);
   background-image: radial-gradient(theme(colors.mantis.500 / 75%), theme(colors.stone.900) 120%);
